# HPixLib

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README.rst  autogen.sh  config.h.in  configure.ac  configure.in  index.html  libhpix.pc.in  libhpix_cairo.pc.in  make-tags.sh  params.json
doc/: Makefile  Makefile.am  chealpix.info  chealpix.texi  fdl.texi  make.bat  stamp-vti
doc/source/: conf.py  drawing.rst  index.rst  installation.rst  introduction.rst  map-type.rst  mathematics.rst  pixel-funcs.rst  usage.rst  utilities.rst
examples/: Makefile.am  map2ppm.c  mapinfo.c
pkgconfig/: CMakeLists.txt  libchealpix.pc.in  libhpix.pc.in
qfits/src/: Makefile.am  qfits_byteswap.c  qfits_header.c  qfits_image.c  qfits_memory.c
src/: CMakeLists.txt  Makefile.am  Makefile.in  bitmap.c  bluestein.c  c_utils.c  cairo_interface.c  chealpix.c  chealpix.h  chealpix.idx  chealpix.scn  chealpix.tex  chealpix.w  chpx.h  constants.h  equirectangular_projection.c  fftpack.c  hpix.h  hpxlib.h  integer_functions.c  io.c  ls_fft.c  map.c  math.c  matrices.c  mem.c  misc.c  mollweide_projection.c  order_conversion.c  palette.c  pix2xy.c  positions.c  psht.c  psht_almhelpers.c  psht_geomhelpers.c  psht_perftest.c  psht_test.c  query_disc.c  rotate.c  test_pixelfuncs.c  (+4 more)
src/hpixlib/: hpix-cairo.h  hpix.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  angles_to_pixel.c  bmp_projection.c  check_helpers.h  libtest.h  map_io.c  nest_to_ring.c  npixel_to_nside.c  nside_to_npixel.c  palette.c  pixel_to_angles.c  query_disc.c  reference_map.inc.c  ring_to_nest.c  switch_order.c  test_angles_to_pixel.c  test_bmp_projection.c  test_io.c  test_map_io.c  test_nest_to_ring.c  test_npixel_to_nside.c  test_nside_to_npixel.c  test_palette.c  test_pixel_functions.c  test_pixel_to_angles.c  test_pixelfuncs.c  test_projections.c  test_ring_to_nest.c  test_rotations.c  test_switch_order.c  test_vector_functions.c
utilities/: CMakeLists.txt  Makefile.am  map2fig.c
